[gd_scene load_steps=7 format=3 uid="uid://cjfwj44yrbrdv"]

[ext_resource type="Script" uid="uid://ce6bvnfr736so" path="res://main.gd" id="1_8ytdd"]
[ext_resource type="PackedScene" uid="uid://b2ytcx4jasl5e" path="res://Asset/Walking.tscn" id="2_74dgk"]
[ext_resource type="PackedScene" uid="uid://cm230qhyh2rx7" path="res://Asset/Grass Platform.glb" id="3_ssb5w"]
[ext_resource type="PackedScene" uid="uid://dh37l425a302n" path="res://Asset/Wireless Machine.glb" id="4_ssb5w"]
[ext_resource type="PackedScene" uid="uid://myraie1g701x" path="res://Asset/Generator.glb" id="5_4qse1"]

[sub_resource type="Environment" id="Environment_8ytdd"]
background_mode = 1
background_color = Color(0.547254, 0.750884, 0.915533, 1)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_8ytdd")

[node name="Walking" parent="." instance=ExtResource("2_74dgk")]
transform = Transform3D(0.999962, 0, 0.00874403, 0, 1, 0, -0.00874403, 0, 0.999962, 0, 0.362376, 0)

[node name="Walking2" parent="." instance=ExtResource("2_74dgk")]
transform = Transform3D(1, 0, 0, 0, 0.991319, 0.131478, 0, -0.131478, 0.991319, 4.91394, 0, 0)

[node name="Walking3" parent="." instance=ExtResource("2_74dgk")]
transform = Transform3D(0.998082, 0, -0.0619021, 0, 1, 0, 0.0619021, 0, 0.998082, 11.1252, 0, 0)

[node name="Walking4" parent="." instance=ExtResource("2_74dgk")]
transform = Transform3D(0.999984, 0, -0.00561994, 0, 1, 0, 0.00561994, 0, 0.999984, 16.6586, 0.427043, 0.00757217)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 5.02783, 10.956)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 9, 8)

[node name="Grass Platform" parent="." instance=ExtResource("3_ssb5w")]
transform = Transform3D(50.2638, 0, 0, 0, 10.0594, 0, 0, 0, 37.6027, 9.0088, -1.37107, 0.0965533)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8ytdd")

[node name="Root Scene" parent="." instance=ExtResource("4_ssb5w")]
transform = Transform3D(1.76, 0, 0, 0, 3.04, 0, 0, 0, 1.6, 3.04933, 0.94138, 5.40151)

[node name="Root Scene2" parent="." instance=ExtResource("5_4qse1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.648, 1.11363, -0.489498)

[node name="Root Scene3" parent="." instance=ExtResource("5_4qse1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.62622, 1.27869, 0.0922375)
